--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,173 @@
-.App {
-  text-align: center;
+body {
+  padding: 50px;
+  font-family: monospace;
+  /* margin: 100px; */
+}
+ul {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.progressWrapper {
+  height: 20px;
+  width: 100%;
+  background-color: #c9c9c9;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.progressWrapper div {
+  height: 100%;
+  width: 60%;
+  background-color: mediumspringgreen;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.mainButton {
+  padding: 15px;
+  color: white;
+  background-color: hotpink;
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+.mainButton:hover {
+  opacity: 1;
+}
+.post-image {
+  max-width: 400px;
+  margin-right: 100px;
+}
+
+.navbar {
+  background-color: #333;
+  color: white;
+  padding: 10px 20px;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.navbar-logo {
+  font-size: 1.2em;
+  font-weight: bold;
+  text-decoration: none;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar-links {
+  list-style-type: none;
+  display: flex;
+  gap: 20px;
+  margin-left: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar-link {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  transition: color 0.3s ease-in-out;
+}
+
+.navbar-link:hover {
+  color: #ffcc00;
+}
+
+.navbar-logout {
+  background-color: #ffcc00;
+  color: #333;
+  padding: 8px 12px;
+  margin-left: auto;
+  border: none;
+  cursor: pointer;
+  font-weight: bold;
+  text-decoration: none;
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+
+.navbar-logout:hover {
+  background-color: #fff;
+  color: #333;
+}
+
+.create-post-container {
+  background-color: #f4f4f4;
+  max-width: 400px;
+  margin: 50px auto;
+  padding: 50px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.create-post-input {
+  width: 100%;
+  margin-bottom: 15px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  overflow: hidden;
+}
+
+.create-post-button {
+  background-color: #4caf50;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.create-post-button:hover {
+  background-color: #45a049;
+}
+
+.posts-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.post {
+  background-color: #f4f4f4;
+  padding: 15px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 300px;
+}
+.post:hover {
+  transform: scale(1.03);
+}
+
+.post-link {
+  text-decoration: none;
+  color: #000000;
+}
+.post-link:hover {
+  color: #aac0ab;
+}
+
+.post-title {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.post-description {
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
+.post-author {
+  font-size: 14px;
+  color: #000000;
+  cursor: pointer;
+}
+.post-author:hover {
+  color: #aac0ab;
+}
+
+.post-image {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  margin-top: 10px;
+}
+
+.sort-buttons > button {
+  margin-right: 15px;
+  margin-bottom: 20px;
 }
